--- a/style.css
+++ b/style.css
@@ -8,9 +8,15 @@ body {
     width: 800px;
     margin-left: auto;
     margin-right: auto;
+    color: #555555;
+}
+
+h1 {
+    color: #333333;
 }
 
 h2 {
+    color: #333333;
     font-size: 24px;
 }
 
@@ -19,6 +25,14 @@ h2 {
     display; flex;
     flex-direction: column;
     justify-content: center;
+}
+
+#titleBlock h2 {
+    margin-top: 0px;
+}
+
+#titleBlock h1 {
+    margin-bottom: 5px;
 }
 
 /*#titleBlock ul {
@@ -32,14 +46,45 @@ h2 {
     display: inline-block;
 }
 
+#contact1::after, #contact2::after {
+    content: " - ";
+}
+
 .section {
-    
+    display: flex;
+    flex-direction: row; 
+    margin-bottom: 10px;
 }
 
 .section h2 {
+    text-align: center;
     width: 30%;
 }
 
 #content {
     width: 70%
+}
+
+.sectionTitle {
+    color: #444444;
+    font-size: 22px;
+}
+
+.programTitle {
+    margin: 5px 0px;
+    font-size: 16px;
+}
+
+.year {
+    font-size: 12px;
+    color: #666666;
+}
+
+.expPos {
+    font-size: 18px;
+    margin: 5px 0px;
+}
+
+.expDesc {
+    margin-top: 5px;
 }
