--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
     color: #555555;
 }
 
+p {
+    margin: 0px;
+}
+
 h1 {
     color: #333333;
 }
@@ -18,6 +22,7 @@ h1 {
 h2 {
     color: #333333;
     font-size: 24px;
+    margin-top: 0px;
 }
 
 #titleBlock {
@@ -53,12 +58,13 @@ h2 {
 .section {
     display: flex;
     flex-direction: row; 
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .section h2 {
-    text-align: center;
+    text-align: left;
     width: 30%;
+    margin-right: 10px;
 }
 
 #content {
