--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html,body {
 }
 
 body {
-    width: 800px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     color: #555555;
@@ -40,13 +40,6 @@ h2 {
     margin-bottom: 5px;
 }
 
-/*#titleBlock ul {
-    text-align: center;
-    display; flex;
-    flex-direction: row;
-    justify-content: space-around;
-}*/
-
 #titleBlock ul li {
     display: inline-block;
 }
@@ -58,17 +51,34 @@ h2 {
 .section {
     display: flex;
     flex-direction: row; 
-    margin-bottom: 15px;
+    margin-bottom: 30px;
 }
 
 .section h2 {
-    text-align: left;
-    width: 30%;
+    text-align: center;
+    width: 20%;
     margin-right: 10px;
 }
 
 #content {
-    width: 70%
+    width: 80%
+}
+
+/* skills */
+
+#skillsMainLi {
+    margin: 0px;
+    padding-left: 0px;
+}
+
+.primarySkillLi {
+    display: inline-block;
+    //height: 200px;
+    //width: 200px;
+}
+
+.primarySkillLi h3 {
+    margin-top:0px;
 }
 
 .sectionTitle {
