--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html,body {
 
 body {
     width: 100%;
+    min-width: 600px;
     margin-left: auto;
     margin-right: auto;
     color: #555555;
@@ -25,29 +26,6 @@ h2 {
     margin-top: 0px;
 }
 
-#titleBlock {
-    text-align: center;
-    display; flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-#titleBlock h2 {
-    margin-top: 0px;
-}
-
-#titleBlock h1 {
-    margin-bottom: 5px;
-}
-
-#titleBlock ul li {
-    display: inline-block;
-}
-
-#contact1::after, #contact2::after {
-    content: " - ";
-}
-
 .section {
     display: flex;
     flex-direction: row; 
@@ -65,7 +43,53 @@ h2 {
     width: 80%
 }
 
+/* title block */
+
+#titleBlock {
+    width:100%;
+    text-align: center;
+    display; flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#titleBlock h2 {
+    color: #555555;
+    font-size: 17px;
+    margin-top: 0px;
+}
+
+#titleBlock h1 {
+    margin-bottom: 5px;
+}
+
+#titleBlock ul li {
+    display: inline-block;
+    font-size: 19px;
+    color: #444444;
+}
+
+#titleBlock ul {
+    margin: 30px 0px;
+}
+
+#contact1::after, #contact2::after {
+    content: ' \2022 ';
+}
+
+#titleBlock .content {
+    width: 100%;
+}
+
+#skillCat1, #skillCat2 {
+    margin-bottom: 10px;
+}
+
 /* skills */
+
+#skills {
+    margin-bottom: 20px;
+}
 
 #skillsMainLi {
     margin: 0px;
